fixing border overflow FIT-1641

--- a/themes/expressadmin/css/styles.css
+++ b/themes/expressadmin/css/styles.css
@@ -252,7 +252,7 @@ tr td:last-child { border-right: 1px solid #bebfb9; /* LTR */ }
 
 .admin-panel .body { border: 1px solid #e7e7e7; padding: 10px; }
 
-.admin-panel .body .admin-list li { border: none; border-bottom: 1px solid #e7e7e7; padding: 10px; margin: 0 -10px; }
+.admin-panel .body .admin-list li { border: none; border-bottom: 1px solid #e7e7e7; padding: 10px; margin: 0; }
 
 .admin-panel .body .admin-list li:last-child { border-bottom: none; }
 
